[project]
name = "flowerpower-mqtt-example-config-based"
version = "0.1.0"
description = "Configuration-based example for flowerpower-mqtt."
dependencies = [
    # flowerpower-mqtt will be installed in editable mode from the root
    "jupyterlab",
]

[tool.uv]
# Potentially configure uv to find the editable install